test/asm/blue-paint.err
error: Invalid character '3' after line continuation
    at blue-paint.asm::arg_to_arg(7) <- blue-paint.asm(9)
error: syntax error, unexpected number
    at blue-paint.asm::arg_to_arg(7) <- blue-paint.asm(9)
error: Invalid character '}'
    at blue-paint.asm::arg_to_arg(7) <- blue-paint.asm(9)
error: Invalid character '{'
    at blue-paint.asm::arg_to_interp(13) <- blue-paint.asm(15)
error: Invalid character '}'
    at blue-paint.asm::arg_to_interp(13) <- blue-paint.asm(15)
error: Invalid character '1' after line continuation
    at blue-paint.asm::endless(24) <- blue-paint.asm(26)
error: syntax error, unexpected number
    at blue-paint.asm::endless(24) <- blue-paint.asm(26)
FATAL: Recursion limit (5) exceeded
    at blue-paint.asm(30)
    while expanding symbol `infinite`
    while expanding symbol `infinite`
    while expanding symbol `infinite`
    while expanding symbol `infinite`
    while expanding symbol `infinite`
    while expanding symbol `infinite`
    while expanding symbol `infinite`
